# University-Registration-System

./: .env.example  .env.production.example  .flake8  .gitignore  COMPLETION_PLAN.md  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  Dockerfile  HONEST_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ONE_DAY_UPGRADE.md  PHASE1_COMPLETE.md  PROGRESS.md  QUICK_START.md  README.md  SETUP.md  app.py  config.py  docker-compose.yml  init_db.py  project_structure.md  pyproject.toml  railway.json  requirements.txt  run.py  seed_data.py  vercel.json  wsgi.py
.github/workflows/: ci.yml
api/: index.py
app/: __init__.py  forms.py  tasks.py
app/admin/: __init__.py  routes.py
app/api/: __init__.py  auth.py  courses.py  enrollments.py  grades.py  transcripts.py  users.py
app/auth/: __init__.py  routes.py
app/instructor/: __init__.py  routes.py
app/main/: __init__.py  routes.py
app/models/: __init__.py  announcement.py  assignment.py  audit.py  course.py  enrollment.py  media.py  notification.py  profile.py  room.py  transcript.py  user.py
docs/: er_diagram.md  phase3_transcript_generation_summary.md
scripts/: backfill_student_numbers.py  repro_create_user.py
tests/: README.md  conftest.py  helpers.py  test_admin_enroll_by_student_number.py  test_admin_routes.py  test_auth_api.py  test_auth_lockout.py  test_courses_api.py  test_courses_api_rbac.py  test_enroll_and_nav_badge.py  test_enrollment_engine.py  test_enrollment_logic.py  test_grading.py  test_grading_api.py  test_health.py  test_instructor_announcements.py  test_pdf_views.py  test_transcript_api.py
(+76 files in other folders)
